# onebot-github-webhook

./: .dockerignore  .env.examples  .gitignore  .pylintrc  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  app.py  config.example.toml  config.example.yaml  main.py  pyproject.toml  readme.md  requirements.txt  send_message.py  settings.py  template.py
.github/workflows/: docker-image.yml  mdbook.yaml  pylint.yml
app/: dependencies.py  exceptions.py
app/api/: __init__.py  github_webhook.py
app/botclient/: __init__.py  base.py  factory.py  manager.py
app/botclient/onebot/: __init__.py  onebot.py
app/core/: __init__.py  github.py  onebot.py
app/core/github/: __init__.py  polling.py  webhook.py
app/models/: __init__.py  config.py  message.py  universal_message.py  webhook_event.py
app/onebot/: __init__.py  onebot.py
app/services/: __init__.py  message_formatter.py  webhook_service.py
app/utils/: __init__.py  exceptions.py  logger.py  matching.py
config/templates/: default.txt
config/templates/push/: default.txt
docker/: docker-compose.yml
docs/: book.toml
docs/src/: SUMMARY.md  api.md  configuration.md  contributing.md  deployment.md  faq.md  features.md  github-webhook-setup.md  installation.md  introduction.md  license.md  local-development.md  roadmap.md  structure.md  usage.md
hooks/: github_webhook.py
src/: config.rs  error.rs  feishu.rs  lib.rs  main.rs  matching.rs  message.rs
src/github/: formatter.rs  mod.rs  payload.rs  webhook.rs
src/onebot/: client.rs  http.rs  mod.rs  websocket.rs
src/routes/: github.rs  mod.rs
templates/issues/: default.txt
templates/pull_request/: default.txt
tests/: __init__.py  test_matching.py  test_multi_backend.py  test_onebot_sender.py  test_webhook_signature.py
tools/: migrate_config.py
