[package]
name = "onebot-github-webhook"
version = "0.1.0"
edition = "2021"
authors = ["AptS-1547"]
description = "GitHub Webhook to OneBot bridge service"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }

# WebSocket client
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
constant_time_eq = "0.4"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
glob = "0.3"
url = "2"
http = "1"
bytes = "1"
